# weidian_aftersales

./: .gitignore  README.md  pyproject.toml
scripts/: com.shop.aftersale.plist  dashboard.sh  diagnose_b.py  login.sh  run.sh  smoke_test.sh  supplier_dump.sh  trace_dump.sh
src/: config.py  db.py  runner.py
src/dashboard/: app.py
src/logistics/: kuaidi100.py  sogou.py  weidian_trace.py
src/notify/: render.py  templates.py  wecom.py
src/report/: daily.py
src/rules/: engine.py
src/weidian/: buyer_client.py  client.py  login.py  order_supplier.py  overview.py  supplier_dump.py  trace_dump.py
tests/: test_b_quota.py  test_buyer_client.py  test_buyer_engine.py  test_d_match.py  test_login_error.py  test_logistics_parse.py  test_render.py  test_rules_engine.py  test_templates_buyer.py  test_weidian_parse.py  test_weidian_trace_parse.py
